chore：add third lib

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "egg": "^2.6.1",
     "egg-scripts": "^2.6.0",
     "ioredis": "^4.17.3",
+    "js-yaml": "^3.14.0",
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.12",
