--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "egg-scripts": "^2.6.0",
     "egg-ts-typeorm": "^1.1.12",
     "js-yaml": "^3.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.12",
