--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.19.2",
     "bull": "^3.18.0",
     "egg": "^2.6.1",
+    "egg-global-header": "^1.0.1",
     "egg-redis": "^2.4.0",
     "egg-scripts": "^2.6.0",
     "egg-ts-typeorm": "^1.1.12",
