--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bull": "^3.18.0",
+    "crypto-js": "^4.0.0",
     "egg": "^2.6.1",
     "egg-cors": "^2.2.3",
     "egg-global-header": "^1.0.1",
     "egg-redis": "^2.4.0",
     "egg-scripts": "^2.6.0",
     "egg-ts-typeorm": "^1.1.12",
+    "egg-validate": "^2.0.2",
     "js-yaml": "^3.14.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
