--- a/config/error_constants.yaml
+++ b/config/error_constants.yaml
@@ -6,6 +6,10 @@
 10001: 系统用户已存在
 10002: 填写验证码有误
 10003: 用户名密码有误
+10004: 节点路由已存在
+10005: 权限必须包含父节点
+10006: 非法操作：该节点仅支持目录类型父节点
+10007: 非法操作：节点类型无法直接转换
 
 # token相关
 11001: 登录无效或无权限访问
