--- a/config/error_constants.yaml
+++ b/config/error_constants.yaml
@@ -12,6 +12,7 @@
 10007: 非法操作：节点类型无法直接转换
 10008: 该角色存在关联用户，请先删除关联用户
 10009: 该部门存在关联用户，请先删除关联用户
+10010: 该部门存在关联角色，请先删除关联角色
 
 # token相关
 11001: 登录无效或无权限访问
