--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build": "npm run tsc"
   },
   "dependencies": {
+    "@hackycy/egg-typeorm": "^0.2.1",
     "axios": "^0.19.2",
     "bull": "^3.18.0",
     "crypto-js": "^4.0.0",
@@ -31,7 +32,6 @@
     "egg-global-header": "^1.0.1",
     "egg-redis": "^2.4.0",
     "egg-scripts": "^2.6.0",
-    "egg-ts-typeorm": "^1.1.12",
     "egg-validate": "^2.0.2",
     "js-yaml": "^3.14.0",
     "jsonwebtoken": "^8.5.1",
