feat：增加删除任务及执行任务相关接口

--- a/config/error_constants.yaml
+++ b/config/error_constants.yaml
@@ -1,7 +1,7 @@
 # 业务代码错误信息配置 
 # docs: https://github.com/nodeca/js-yaml
 
-# 10000 - 99999 admin-api-error
+# 10000 - 99999 业务操作错误
 10000: 参数校验异常
 10001: 系统用户已存在
 10002: 填写验证码有误
@@ -16,6 +16,7 @@
 10011: 旧密码与原密码不一致
 10012: 如想下线自身可右上角退出
 10013: 不允许下线该用户
+10014: 该任务正在运行中，请先停止任务
 
 # token相关
 11001: 登录无效或无权限访问
