chore：add puppeteer cheerio lib

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@hackycy/egg-typeorm": "^0.3.7",
     "axios": "^0.19.2",
     "bull": "^3.18.0",
+    "cheerio": "^1.0.0-rc.3",
     "crypto-js": "^4.0.0",
     "egg": "^2.6.1",
     "egg-cors": "^2.2.3",
@@ -43,6 +44,7 @@
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.12",
     "nodemailer": "^6.4.11",
+    "puppeteer-core": "^5.3.1",
     "qiniu": "^7.3.2",
     "svg-captcha": "^1.4.0",
     "ua-parser-js": "^0.7.22",
@@ -53,6 +55,7 @@
     "@types/lodash": "^4.14.162",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
+    "@types/puppeteer": "^3.0.2",
     "@types/supertest": "^2.0.0",
     "@types/ua-parser-js": "^0.7.33",
     "autod": "^3.0.1",
