chore：add @types/nodemailer

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@hackycy/egg-bull": "0.0.5",
     "@hackycy/egg-class-validator": "0.1.1",
     "@hackycy/egg-typeorm": "^0.3.7",
+    "@types/nodemailer": "^6.4.0",
     "axios": "^0.19.2",
     "bull": "^3.18.0",
     "cheerio": "^1.0.0-rc.3",
