chore fix lib type

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "declarations": true
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-admin-server",
-    "stop": "egg-scripts stop --title=egg-admin-server",
-    "dev": "egg-bin dev",
+    "start": "egg-scripts start --sticky --daemon --title=egg-admin-server",
+    "stop": "egg-scripts stop --sticky --title=egg-admin-server",
+    "dev": "egg-bin dev --sticky",
     "debug": "egg-bin debug",
     "test-local": "egg-bin test",
     "test": "npm run lint -- --fix && npm run test-local",
@@ -26,7 +26,6 @@
     "@hackycy/egg-bull": "0.0.5",
     "@hackycy/egg-class-validator": "0.1.1",
     "@hackycy/egg-typeorm": "^0.3.7",
-    "@types/nodemailer": "^6.4.0",
     "axios": "^0.19.2",
     "bull": "^3.18.0",
     "cheerio": "^1.0.0-rc.3",
@@ -57,7 +56,8 @@
     "@types/lodash": "^4.14.162",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
-    "@types/puppeteer": "^3.0.2",
+    "@types/nodemailer": "^6.4.0",
+    "@types/puppeteer-core": "^2.0.0",
     "@types/supertest": "^2.0.0",
     "@types/ua-parser-js": "^0.7.33",
     "autod": "^3.0.1",
