--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint . --ext .ts",
     "clean": "ets clean",
     "build": "npm run tsc",
-    "apidoc": "apidoc -i app/controller -o public/apidoc"
+    "apidoc": "apidoc -i app/controller -o docs/api"
   },
   "dependencies": {
     "@hackycy/egg-bull": "0.0.5",
